--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ parameter('common_lang', 'ru') }}">
     <!-- OpenSource WebSpace Engine CMS (Full free for all) Powered by 0x12f Team -->
     <!-- GitHub: https://github.com/0x12f -->
 
