--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -26,11 +26,6 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" data-toggle="pill" href="#list" role="tab">
-                                        Состав заказа
-                                    </a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#other" role="tab">
                                         Дополнительно
                                     </a>
@@ -107,47 +102,46 @@
                                         } %}
                                     </div>
                                 </div>
-                            </div>
 
-                            {# Tab: Состав заказа #}
-                            <div class="tab-pane fade" id="list" role="tabpanel">
+                                <div class="separator-dot"></div>
                                 <div class="d-flex align-items-center">
-                                    <button type="button" data-btn-modal-products class="btn btn-primary btn-round ml-auto">
+                                    <div class="card-title">Состав заказа</div>
+
+                                    <button type="button" data-btn-modal-products class="btn btn-outline-info btn-round ml-auto">
                                         <i class="fa fa-plus"></i>
                                         Добавить товар
                                     </button>
                                 </div>
-
                                 <div class="separator-dot"></div>
 
                                 <table data-table class="table table-striped table-hover" style="width: 100%;">
                                     <thead>
-                                        <tr>
-                                            <th class="no-sorting">Позиция</th>
-                                            <th width="15%" class="no-sorting">Цена</th>
-                                            <th width="15%" class="no-sorting">Количество</th>
-                                        </tr>
+                                    <tr>
+                                        <th class="no-sorting">Позиция</th>
+                                        <th width="15%" class="no-sorting">Цена</th>
+                                        <th width="15%" class="no-sorting">Количество</th>
+                                    </tr>
                                     </thead>
                                     <tbody>
-                                        {% for product in products %}
-                                            {% set count = order.list[product.uuid.toString()] %}
-                                            <tr>
-                                                <td>{{ product.title }}</td>
-                                                <td>{{ product.price|number_format(2, '.', ' ') }}</td>
-                                                <td>
-                                                    {% include 'cup/form.twig' with {
-                                                        'type': 'number',
-                                                        'name': 'list['~ product.uuid ~']',
-                                                        'args': {
-                                                            'value': count,
-                                                            'placeholder': '1',
-                                                            'step': 'any',
-                                                            'min': '0',
-                                                        }
-                                                    } %}
-                                                </td>
-                                            </tr>
-                                        {% endfor %}
+                                    {% for product in products %}
+                                        {% set count = order.list[product.uuid.toString()] %}
+                                        <tr>
+                                            <td>{{ product.title }}</td>
+                                            <td>{{ product.price|number_format(2, '.', ' ') }}</td>
+                                            <td>
+                                                {% include 'cup/form.twig' with {
+                                                    'type': 'number',
+                                                    'name': 'list['~ product.uuid ~']',
+                                                    'args': {
+                                                        'value': count,
+                                                        'placeholder': '1',
+                                                        'step': 'any',
+                                                        'min': '0',
+                                                    }
+                                                } %}
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
                                     </tbody>
                                 </table>
                             </div>
@@ -273,7 +267,7 @@
             </div>
             <div class="col-6">
                 <div class="text-right" style="margin-top: 37px;">
-                    <button type="button" class="btn btn-success">Добавить товар</button>
+                    <button type="button" class="btn btn-outline-info">Добавить товар</button>
                 </div>
             </div>
         </div>
@@ -364,17 +358,22 @@
 
             $btnSuccess.on('click', () => {
                 if ($product.val() && $quantity.val() >= 1) {
-                    let
-                        $selected = $product.find(':selected'),
-                        $input = $('<input class="form-control" type="number" placeholder="1" min="0" step="any">')
-                            .attr('name', 'list[' + $selected.attr('value') + ']')
-                            .val($quantity.val())
-                    ;
+                    let $selected = $product.find(':selected'),
+                        $find = $('[name="list[' + $selected.attr('value') + ']"]');
 
-                    table.row.add([$selected.text(), $selected.data('price'), $quantity.val()])
-                        .draw(true)
-                        .nodes().to$()
-                        .find('td:last-child').html($('<div class="form-group">').append($input));
+                    if ($find.length === 0) {
+                        let $input = $('<input class="form-control" type="number" placeholder="1" min="0" step="any">')
+                                .attr('name', 'list[' + $selected.attr('value') + ']')
+                                .val($quantity.val())
+                        ;
+
+                        table.row.add([$selected.text(), $selected.data('price'), $quantity.val()])
+                            .draw(true)
+                            .nodes().to$()
+                            .find('td:last-child').html($('<div class="form-group">').append($input));
+                    } else {
+                        $find.val(parseFloat($find.val()) + parseFloat($quantity.val()));
+                    }
 
                     $.modal.close();
                 }
