add new user group functions

--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -57,6 +57,11 @@
                 </li>
                 {% if parameter('user_is_enabled', 'yes') != 'no' %}
                     <li>
+                        <a href="/cup/user/group">
+                            <span class="sub-item">Группы</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="/cup/user/subscriber">
                             <span class="sub-item">Подписчики</span>
                         </a>
