--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -135,10 +135,10 @@
                                 {% include 'cup/form.twig' with {
                                     'label': 'Группа',
                                     'type': 'select',
-                                    'name': 'level',
+                                    'name': 'group',
                                     'args': {
-                                        'option': reference('/App/Domain/Types/UserLevelType::LIST'),
-                                        'selected': item.level
+                                        'option': {(NIL): 'Без группы'}|merge(groups.pluck('title', 'uuid').all()),
+                                        'selected': item.group_uuid
                                     }
                                 } %}
                             </div>
