--- a/src/Template/cup/user/index.twig
+++ b/src/Template/cup/user/index.twig
@@ -98,7 +98,7 @@
                             <thead>
                                 <tr>
                                     <th>Логин</th>
-                                    <th class="text-center" width="10%">Доступ</th>
+                                    <th width="15%">Группа</th>
                                     <th width="15%">Дата регистрации</th>
                                     <th width="15%">Дата посещения</th>
                                     <th width="10%" class="text-center no-sorting"></th>
@@ -126,7 +126,7 @@
                                                 </div>
                                             {% endif %}
                                         </td>
-                                        <td class="text-center">{{ user.level }}</td>
+                                        <td>{{ user.group.title ?? '<code>Без группы</code>' }}</td>
                                         <td data-order="{{ user.register.getTimestamp() }}">{{ user.register|df('d.m.Y H:i:s') }}</td>
                                         <td data-order="{{ user.session.date.getTimestamp() }}">{{ user.session.date ? user.session.date|df('d.m.Y H:i:s') : '' }}</td>
                                         <td class="text-center">
