--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -45,9 +45,9 @@
                                             'name': 'delivery[client]',
                                             'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="ФИО клиента"></i>',
                                             'args': {
-                                                'value': order.user_uuid and item ? item.getName() : order.delivery.client,
+                                                'value': order.user ? order.user.getName() : order.delivery.client,
                                                 'required': true,
-                                                'readonly': order.user_uuid and item ? true : false
+                                                'readonly': order.user ? true : false
                                             }
                                         } %}
                                     </div>
@@ -59,8 +59,8 @@
                                             'type': 'tel',
                                             'name': 'phone',
                                             'args': {
-                                                'value': order.user_uuid and item and item.phone ? item.phone : order.phone,
-                                                'readonly': order.user_uuid and item and item.phone ? true : false
+                                                'value': order.user and order.user.phone ? order.user.phone : order.phone,
+                                                'readonly': order.user and order.user.phone ? true : false
                                             }
                                         } %}
                                     </div>
@@ -70,8 +70,8 @@
                                             'type': 'email',
                                             'name': 'email',
                                             'args': {
-                                                'value': order.user_uuid and item and item.email ? item.email : order.email,
-                                                'readonly': order.user_uuid and item and item.email ? true : false
+                                                'value': order.user and order.user.email ? order.user.email : order.email,
+                                                'readonly': order.user and order.user.email ? true : false
                                             }
                                         } %}
                                     </div>
@@ -84,8 +84,8 @@
                                             'type': 'textarea',
                                             'name': 'delivery[address]',
                                             'args': {
-                                                'value': order.user_uuid and item ? item.getAddress() : order.delivery.address,
-                                                'readonly': order.user_uuid and item ? true : false,
+                                                'value': order.user ? order.user.getAddress() : order.delivery.address,
+                                                'readonly': order.user ? true : false,
                                                 'style': 'min-height: 131px;'
                                             }
                                         } %}
@@ -194,7 +194,7 @@
                                             'name': 'user_uuid',
                                             'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Системное поле. Если вы не знаете, зачем это поле - лучше его не трогать."></i>',
                                             'args': {
-                                                'value': order.user_uuid and item ? item.uuid : ''
+                                                'value': order.user ? order.user.uuid : ''
                                             }
                                         } %}
                                     </div>
