--- a/theme/default/catalog.category.filter.twig
+++ b/theme/default/catalog.category.filter.twig
@@ -18,7 +18,7 @@
             {% set variants = variants.unique() %}
 
             {% if variants.count() %}
-                <div class="col-4 filter-widget">
+                <div class="col-6 col-md-4 col-lg-3 filter-widget">
                     <h2 class="fw-title">{{ name }}</h2>
                     <ul class="category-menu">
                         {% for variant in variants.unique() %}
